// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterList.Item renders consistently 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 8px 11px;
  margin: 0 0 5px 0;
  overflow: hidden;
  font-size: 14px;
  color: #57606a;
  background-color: !important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
  border-radius: 3px;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f6f8fa;
}

.c0:active {
  color: #ffffff;
  background-color: #0969da;
}

.c0 .count {
  float: right;
  font-weight: 600;
}

<a
  className="c0"
/>
`;

exports[`FilterList.Item respects the "selected" prop 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 8px 11px;
  margin: 0 0 5px 0;
  overflow: hidden;
  font-size: 14px;
  color: #ffffff;
  background-color: #0969da!important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
  border-radius: 3px;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f6f8fa;
}

.c0:active {
  color: #ffffff;
  background-color: #0969da;
}

.c0 .count {
  float: right;
  font-weight: 600;
}

<a
  className="c0"
  selected={true}
/>
`;
